--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,19 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# VSC settings
+.vscode/
+
+# github
+.github/
+*.bak
+
+# tmp and cache dir
+
 # C extensions
 *.so
 
 # Distribution / packaging
-.vscode/
 .Python
 build/
 develop-eggs/
